package com.logmate.team.model;

public enum MemberRole {
    ADMIN,   // 관리자
    MEMBER,  // 일반 멤버
    VIEWER;  // 읽기 전용
}
